--- a/frontend/src/app/tecnico/paciente/editar-perfil/editar-perfil.component.html
+++ b/frontend/src/app/tecnico/paciente/editar-perfil/editar-perfil.component.html
@@ -1,10 +1,10 @@
 <header class="header">
    <div class="container">
-     <h1 class="text-center">Editar Perfil do Paciente</h1>
+     <h1>Editar Perfil do Paciente</h1>
    </div>
  </header>
  
- <div class="container my-4">
+ <div class="my-4">
    <form [formGroup]="pacienteForm">
      <div class="row">
        <!-- Dados do Paciente -->
