--- a/frontend/src/app/formulario/formulario.component.html
+++ b/frontend/src/app/formulario/formulario.component.html
@@ -2,8 +2,8 @@
     <div *ngIf="showSuccessAlert" class="alert alert-success alert-dismissible fade show" role="alert">
         <strong>Sucesso!</strong> Avaliação salva com sucesso.
         <div class="mt-2">
-            <a [routerLink]="['/']" class="alert-link me-3">Voltar para a página inicial</a>
-            <a *ngIf="pacienteId" [routerLink]="['/pacientes', pacienteId]" class="alert-link">Ver perfil do paciente</a>
+            <a [routerLink]="['/tecnico']" class="alert-link me-3">Voltar para a página inicial</a>
+            <a *ngIf="pacienteId" [routerLink]="['/ver-perfil']" [queryParams]="{ id: pacienteId }" class="alert-link">Ver perfil do paciente</a>
         </div>
         <button type="button" class="btn-close" (click)="fecharAlerta()" aria-label="Close"></button>
     </div>
