--- a/frontend/src/app/paciente/visualizar-perfil/visualizar-perfil.component.html
+++ b/frontend/src/app/paciente/visualizar-perfil/visualizar-perfil.component.html
@@ -19,8 +19,8 @@
           {{ paciente?.endereco?.numero }} -
           {{ paciente?.endereco?.bairro }},
           {{ paciente?.endereco?.municipio }} -
-          {{ paciente?.endereco?.UF }},
-          CEP: {{ paciente?.endereco?.CEP }}
+          {{ paciente?.endereco?.uf }},
+          CEP: {{ paciente?.endereco?.cep }}
         </p>
         <p><strong>Data de Nascimento:</strong> {{ paciente?.dataNasc }}</p>
         <p><strong>Idade:</strong> {{ paciente?.idade }}</p>
