--- a/frontend/src/app/paciente/historico-testes/historico-testes.component.html
+++ b/frontend/src/app/paciente/historico-testes/historico-testes.component.html
@@ -1,13 +1,11 @@
 <div class="container my-5">
-  <h1 class="text-center">Histórico de Testes</h1>
-
-  <!-- Mensagem de carregamento -->
+  <h1 class="text-center">Bem vindo {{paciente?.nome}}</h1>
+  <h2 class="text-center">Histórico de Testes</h2>
   <div *ngIf="!testes || testes.length === 0" class="text-center">
     <p *ngIf="!isLoading">Nenhum teste encontrado.</p>
     <p *ngIf="isLoading">Carregando histórico de testes...</p>
   </div>
 
-  <!-- Tabela de testes -->
   <table *ngIf="testes && testes.length > 0" class="table table-striped mt-4">
     <thead class="thead-dark">
       <tr>
@@ -19,9 +17,9 @@
     </thead>
     <tbody>
       <tr *ngFor="let teste of testes">
-        <td>{{ teste.titulo }}</td>
-        <td>{{ teste.data | date: 'dd/MM/yyyy' }}</td>
-        <td>{{ teste.pontuacaoGeral }}%</td>
+        <td>{{ teste.formulario }}</td>
+        <td>{{ teste.dataCriacao | date: 'dd/MM/yyyy' }}</td>
+        <td>{{ teste.pontuacaoTotal }}%</td>
         <td>
           <button class="btn btn-sm btn-info" (click)="visualizarTeste(teste.id)">
             Visualizar
