--- a/frontend/src/app/tecnico/comparar-resultados/comparar-resultados.component.html
+++ b/frontend/src/app/tecnico/comparar-resultados/comparar-resultados.component.html
@@ -1,1 +1,46 @@
-<p>comparar-resultados works!</p>
+<div class="container mt-4">
+  <h3 class="text-center"><i class="fas fa-chart-line"></i> Comparar Resultados</h3>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col"><i class="fas fa-file-alt"></i> Tipo de Teste</th>
+        <th scope="col"><i class="fas fa-clock"></i> Tempo Total</th>
+        <th scope="col"><i class="fas fa-star"></i> Pontuação Total</th>
+        <th scope="col"><i class="fas fa-tools"></i> Ações</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let teste of testes">
+        <td>{{ teste.tipo }}</td>
+        <td>{{ teste.tempoTotal }}</td>
+        <td>{{ teste.pontuacaoTotal }}</td>
+        <td>
+          <button class="btn btn-primary btn-sm" (click)="exibirDetalhes(teste)">
+            <i class="fas fa-eye"></i> Detalhes
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+  <!-- Dropdown para exibir resultados -->
+  <div *ngIf="resultadoSelecionado" class="mt-4">
+    <h5><i class="fas fa-info-circle"></i> Resultados para: {{ resultadoSelecionado.tipo }}</h5>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col"><i class="fas fa-question-circle"></i> Questão</th>
+          <th scope="col"><i class="fas fa-check-circle"></i> Resposta</th>
+          <th scope="col"><i class="fas fa-chart-bar"></i> Média dos Outros Pacientes</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let questao of resultadoSelecionado.detalhes">
+          <td>{{ questao.texto }}</td>
+          <td>{{ questao.resposta }}</td>
+          <td>{{ questao.media }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
