--- a/frontend/src/app/tecnico/paciente/editar-perfil/editar-perfil.component.html
+++ b/frontend/src/app/tecnico/paciente/editar-perfil/editar-perfil.component.html
@@ -147,7 +147,7 @@
                      <div class="input-group">
                        <input class="form-control form-control-sm"
                               type="text"
-                              formControlName="CEP"
+                              formControlName="cep"
                               #cepInput
                               (blur)="buscarCep(cepInput.value)"
                               placeholder="00000-000">
@@ -177,7 +177,7 @@
                          <input type="text" class="form-control form-control-sm" formControlName="municipio">
                        </div>
                        <div class="col-4">
-                         <select class="form-select form-select-sm" formControlName="UF">
+                         <select class="form-select form-select-sm" formControlName="uf">
                            <option value="" disabled>UF</option>
                            <option *ngFor="let uf of ufs" [value]="uf">{{uf}}</option>
                          </select>
