--- a/frontend/Web/src/app/tecnico/editar-perfil/editar-perfil.component.html
+++ b/frontend/Web/src/app/tecnico/editar-perfil/editar-perfil.component.html
@@ -33,7 +33,6 @@
                            placeholder="Matrícula" 
                            name="matricula" 
                            [(ngModel)]="form.matricula" 
-                           required 
                            readonly>
                     <label for="floatingMatricula">Matrícula</label>
                 </div>
@@ -244,6 +243,9 @@
                 </div>
             </div>
 
+            <div *ngIf="f.submitted && !f.valid" class="alert alert-danger mb-1">
+                Formulário inválido. Verifique todos os campos obrigatórios.
+            </div>
             <button class="w-100 btn btn-primary btn-lg mt-4" type="submit">Salvar Alterações</button>
         </form>
     </div>
